--- a/css/Web/style.css
+++ b/css/Web/style.css
@@ -124,13 +124,6 @@ main {
   padding: 2.5rem 2.7rem 0;
 }
 
-main .friends-container h1 {
-  font-size: 3.2rem;
-  letter-spacing: 0.1rem;
-  padding: 5rem 0 1.5rem;
-  font-weight: 800;
-}
-
 main .header-container {
   margin: 0.3rem 0;
   display: flex;
@@ -366,13 +359,6 @@ footer .footer-select-language p {
 }
 
 /* Charts Content */
-
-main .charts-header-container h1 {
-  font-size: 3.2rem;
-  letter-spacing: 0.1rem;
-  padding: 5rem 0 1.5rem;
-  font-weight: 800;
-}
 
 main .select-device-container p {
   padding: 0.3rem 0;
